2011-01-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	tests: fix VPATH auto-expansion workarounds.
	* tests/parallel-tests8.test, tests/suffix13.test:
	Ensure $< is not surrounded by white space, to prevent Solaris
	make from applying automatic VPATH text expansion.

2010-12-23  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Improve and extend tests `suffix*.test'.
	* tests/suffix.test: Check that suffix rules for C compilation are
	only included once.  Try also with a static library.
	* tests/suffix2.test: Add a new grep to help potential debugging.
	Do not run automake with the `--add-missing' options, since we
	already create all the needed auxiliary files.  Try also *without*
	the `no-dependencies' automake option.
	* tests/suffix4.test: Make grepping of Makefile.in stricter.
	* tests/suffix3.test: Rewritten to run also autoconf, ./configure
	and make.
	* tests/suffix5.test: Likewise.
	* tests/suffix6.test: Fix botched recipe indentation (eight spaces
	were used instead of a tabulation character).  Extend to check
	that `.obj' is handled like `.$(OBJEXT)' (as is done for `.o').
	Improved parsing & grepping of generated Makefile.in.  Other minor
	fixes and improvements.
	* tests/suffix10.test: Move some checks in Makefile.am.  Also run
	"make all".
	* tests/suffix12.test: Likewise, and account for VPATH issues in
	weaker make implementations.
	* tests/suffix11.test: Likewise.  Also, run "make distcheck", for
	completeness, and related changes.
	* tests/suffix8.test: Likewise.  Also, do not put `gcc' anymore
	in $required.
	* tests/suffix13.test: Do not use the `--force-missing' automake
	option unnecessarily.
	* tests/suffix6b.test: New test, semantic sister of `suffix6.test'.
	* tests/suffix6c.test: Likewise.
	* tests/Makefile.am (TESTS): Updated.

2010-12-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
	    Stefano Lattarini  <stefano.lattarini@gmail.com>

	Work around a bug in file-inclusion mechanism of Solaris make.