@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2002, 2010 Free Software Foundation, Inc.
+# Copyright (C) 2002, 2010, 2011 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -44,7 +44,7 @@ libfoo_la_SOURCES = foo.x_
 	  && echo 'WORD: "foo";' \
 	  && echo '%%' \
 ## account for VPATH issues on weaker make implementations
-	  && cat `test -f $< || echo $(srcdir)/`$<; \
+	  && cat `test -f '$<' || echo $(srcdir)/`$<; \
 	} > $@-t
 	mv -f $@-t $@
 .PHONY: test
