@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2002, 2003, 2010 Free Software Foundation, Inc.
+# Copyright (C) 2002, 2003, 2010, 2011 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -35,7 +35,7 @@ baz_SOURCES = baz1.x_ baz2.y-z
 
 .y-z.c .x_.c:
 ## account for VPATH issues on weaker make implementations (e.g. IRIX 6.5)
-	sed 's/INTEGER/int/g' `test -f $< || echo $(srcdir)/`$< >$@
+	sed 's/INTEGER/int/g' `test -f '$<' || echo $(srcdir)/`$< >$@
 
 CLEANFILES = foo.c bar.c baz1.c baz2.c
 
