@@ -1,5 +1,6 @@
 #! /bin/sh
-# Copyright (C) 2002, 2003, 2006, 2010 Free Software Foundation, Inc.
+# Copyright (C) 2002, 2003, 2006, 2010, 2011 Free Software Foundation,
+# Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -32,7 +33,7 @@ SUFFIXES = .baz .o
 # we fake here:
 .baz.o:
 	## account for VPATH issues on weaker make implementations
-	cp `test -f $< || echo $(srcdir)/`$< $@
+	cp `test -f '$<' || echo $(srcdir)/`$< $@
 
 bin_PROGRAMS = foo
 foo_SOURCES = foo.c sub/bar.baz
