@@ -1,5 +1,6 @@
 #! /bin/sh
-# Copyright (C) 1999, 2001, 2002, 2010 Free Software Foundation, Inc.
+# Copyright (C) 1999, 2001, 2002, 2010, 2011 Free Software Foundation,
+# Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -28,7 +29,7 @@ END
 cat > Makefile.am << 'END'
 SUFFIXES = .zoo
 .zoo.cc:
-	sed 's/INTEGER/int/g' `test -f $< || echo $(srcdir)/`$< >$@
+	sed 's/INTEGER/int/g' `test -f '$<' || echo $(srcdir)/`$< >$@
 bin_PROGRAMS = foo
 foo_SOURCES = foo.zoo
 # This is required by "make distcheck".  The useless indirection is
