@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2002, 2003, 2010 Free Software Foundation, Inc.
+# Copyright (C) 2002, 2003, 2010, 2011 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -43,13 +43,13 @@ libfoo_la_SOURCES = bar.x_
 # The elaborate cp commands below account for VPATH issues on
 # weaker make implementations (e.g. IRIX 6.5).
 .x_.y_:
-	cp `test -f $< || echo $(srcdir)/`$< $@
+	cp `test -f '$<' || echo $(srcdir)/`$< $@
 .y_.o:
-	cp `test -f $< || echo $(srcdir)/`$< $@
+	cp `test -f '$<' || echo $(srcdir)/`$< $@
 .y_.z_:
-	cp `test -f $< || echo $(srcdir)/`$< $@
+	cp `test -f '$<' || echo $(srcdir)/`$< $@
 .z_.lo:
-	cp `test -f $< || echo $(srcdir)/`$< $@
+	cp `test -f '$<' || echo $(srcdir)/`$< $@
 
 # Some make implementations don't remove intermediate files
 # automatically, thus causing "make distcheck" to fail if
