@@ -1,6 +1,12 @@
 2011-01-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	tests: fix VPATH auto-expansion workarounds.
+	* tests/suffix10.test, tests/suffix11.test, tests/suffix12.test,
+	tests/suffix3.test, tests/suffix5.test, tests/suffix8.test:
+	Ensure $< is not surrounded by white space, to prevent Solaris
+	make from applying automatic VPATH text expansion.
+
+	tests: fix VPATH auto-expansion workarounds.
 	* tests/parallel-tests8.test, tests/suffix13.test:
 	Ensure $< is not surrounded by white space, to prevent Solaris
 	make from applying automatic VPATH text expansion.
